feat: 将群Ping迁移到CSharp代理
